--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.12",
     "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.2",
     "simple-icons": "^15.12.0",
     "swiper": "^11.2.10",
