--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
+  "version": 2,
+  "functions": {
+    "api/*.js": {
+      "maxDuration": 60,
+      "memory": 1024
+    }
+  },
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
