--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,14 @@
       "dest": "/api/admin/records/[id].js"
     },
     {
+      "src": "/api/admin/records/location/([^/]+)$",
+      "dest": "/api/admin/records/[id].location.js"
+    },
+    {
+      "src": "/api/admin/records/next/([^/]+)$",
+      "dest": "/api/admin/records/[id].next.js"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "/api/$1"
     },
