vercel json update

--- a/vercel.json
+++ b/vercel.json
@@ -11,16 +11,15 @@
       "dest": "/api/admin/records/[id].js"
     },
     {
-      "src": "/api/admin/records/location/([^/]+)$",
+      "src": "/api/admin/records/([^/]+)/location$",
       "dest": "/api/admin/records/[id].location.js"
     },
     {
-      "src": "/api/admin/records/next/([^/]+)$",
-      "dest": "/api/admin/records/[id].next.js"
+      "src": "/api/admin/records/([^/]+)/next$",
+      "dest": "/api/admin/records/[id]/next.js"
     },
 
     { "src": "/api/(.*)", "dest": "/api/$1" },
-
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
